omaha start complete

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,6 +9,10 @@
   margin-right: -28px;
 }
 
+.card-1-deviation-o4 {
+  margin-right: -4px;
+}
+
 .user-cards-2 {
   margin-left: -20px;
   width: 80px;
@@ -16,8 +20,24 @@
   box-shadow: 0px 1px 5px grey;
 }
 
+.card-2-deviation-o4 {
+  margin-left: -50px;
+}
+
 .user-cards-3 {
   margin-left: -46px;
+  width: 80px;
+  height: 110px;
+  box-shadow: 0px 1px 5px grey;
+}
+
+.card-3-deviation-o4 {
+  margin-left: -54px;
+}
+
+
+.user-cards-4 {
+  margin-left: -54px;
   width: 80px;
   height: 110px;
   box-shadow: 0px 1px 5px grey;
