--- a/app/assets/stylesheets/components/_player-card.scss
+++ b/app/assets/stylesheets/components/_player-card.scss
@@ -29,6 +29,10 @@
   border-radius: 5px;
 }
 
+.position-0 .odds-deviation {
+  right: 72%;
+}
+
 #current-winner {
   background-color: rgba($color: red, $alpha: 0.9);
 }
@@ -44,6 +48,10 @@
   border-radius: 5px;
 }
 
+.position-4 .odds-deviation {
+  right: 72%;
+}
+
 .position-5 .percentage {
   position: absolute;
   top: 10%;
@@ -53,6 +61,10 @@
   padding-right: 40px;
   padding-left: 5px;
   border-radius: 5px;
+}
+
+.position-5 .odds-deviation {
+  right: 72%;
 }
 
 .position-2 .percentage {
@@ -66,6 +78,10 @@
   border-radius: 5px;
 }
 
+.position-2 .odds-deviation {
+  left: 72%;
+}
+
 .position-3 .percentage {
   position: absolute;
   top: 10%;
@@ -77,6 +93,10 @@
   border-radius: 5px;
 }
 
+.position-3 .odds-deviation {
+  left: 72%;
+}
+
 .position-1 .percentage {
   position: absolute;
   top: 10%;
@@ -86,4 +106,8 @@
   padding-right: 5px;
   padding-left: 40px;
   border-radius: 5px;
+}
+
+.position-1 .odds-deviation {
+  left: 72%;
 }
