improvement on omaha complete

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -70,14 +70,14 @@
               </div>
             <% else %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "card_back.png", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
-                <%= image_tag "card_back.png", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
                 <% if @current_hand.user_cards.where(user: user).count == 3 %>
-                  <%= image_tag "card_back.png", class: "user-cards-3" %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3" %>
                 <% end %>
                 <% if @current_hand.user_cards.where(user: user).count == 4 %>
-                  <%= image_tag "card_back.png", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
-                  <%= image_tag "card_back.png", class: "user-cards-4" %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[3].deck_card.url}", class: "user-cards-4" %>
                 <% end %>
               </div>
             <% end %>
