--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,23 +1,38 @@
 <div class="show-content-wrapper">
-  <div class="game-infos">
-    <h3><%= @game.name %></h3>
-    <div class="d-flex justify-content-end align-items-end">
-      <% if !@game.users.include?(current_user) %>
-        <%= simple_form_for [@game, @reservation] do |f|%>
-          <div><%= f.submit 'Join this Game !', class: "btn btn-flat"%></div>
-        <% end %>
-      <% else %>
-        <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
-        <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
-        <% if @game.reservations.where(user_id: current_user.id)[0].active %>
-          <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-leave" %>
+  <div class="game-infos-wrapper d-flex justify-content-between">
+    <div class="game-infos">
+      <h3><%= @game.name %></h3>
+      <div class="d-flex justify-content-end align-items-end">
+        <% if !@game.users.include?(current_user) %>
+          <%= simple_form_for [@game, @reservation] do |f|%>
+            <div><%= f.submit 'Join this Game !', class: "btn btn-flat"%></div>
+          <% end %>
         <% else %>
-          <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+          <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
+          <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
+          <% if @game.reservations.where(user_id: current_user.id)[0].active %>
+            <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-leave" %>
+          <% else %>
+            <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+          <% end %>
         <% end %>
+      </div>
+    </div>
+
+    <div class="game-infos-right">
+      <div>
+        <h6><%= @game.sb_amount %>€/<%= @game.sb_amount %>€/<%= @game.max_bet_amount %>€</h6>
+        <% if @game.hands.count == 0 || @game.hands.count == 1 %>
+          <p><%= @game.hands.count %> hand played</p>
+        <% else %>
+          <p><%= @game.hands.count %> hands played</p>
+        <% end %>
+      </div>
+      <% if @game.hand_limit == 100000 %>
+        <%= link_to "Last 10 hands", game_path(@game), method: :put, class: "btn btn-leave" %>
       <% end %>
     </div>
   </div>
-
 
   <% player_position = 1 %>
   <div class="poker-table mb-5">
