--- a/app/assets/stylesheets/components/_game-infos.scss
+++ b/app/assets/stylesheets/components/_game-infos.scss
@@ -8,6 +8,17 @@
   padding: 10px;
 }
 
+
+.game-infos-right {
+  margin-bottom: 40px;
+  color: white;
+  border: 1px solid black;
+  width: 180px;
+  margin-right: -60px;
+  background-color: rgba($color: black, $alpha: 0.4);
+  padding: 10px;
+}
+
 .btn-leave {
   color: white;
   padding: 4px 12px;
