--- a/app/assets/stylesheets/components/_game-infos.scss
+++ b/app/assets/stylesheets/components/_game-infos.scss
@@ -1,5 +1,5 @@
 .game-infos {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   color: white;
   border: 1px solid black;
   width: fit-content;
@@ -11,6 +11,7 @@
 
 .game-infos-right {
   margin-bottom: 40px;
+  text-align: center;
   color: white;
   border: 1px solid black;
   width: 180px;
