--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,21 +2,23 @@
   <div class="game-infos-wrapper d-flex justify-content-between">
     <div class="game-infos">
       <h3><%= @game.name %></h3>
-      <div class="d-flex justify-content-end align-items-end">
-        <% if !@game.users.include?(current_user) %>
-          <%= simple_form_for [@game, @reservation] do |f|%>
-            <div><%= f.submit 'Join this Game !', class: "btn btn-flat"%></div>
-          <% end %>
-        <% else %>
-          <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
-          <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
-          <% if @game.reservations.where(user_id: current_user.id)[0].active %>
-            <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-leave" %>
+      <% if @game.reservations.where(active: true).count < 6 %>
+        <div class="d-flex justify-content-end align-items-end">
+          <% if !@game.users.include?(current_user) %>
+            <%= simple_form_for [@game, @reservation] do |f|%>
+              <div><%= f.submit 'Join this Game !', class: "btn btn-flat"%></div>
+            <% end %>
           <% else %>
-            <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+            <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
+            <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
+            <% if @game.reservations.where(user_id: current_user.id)[0].active %>
+              <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-leave" %>
+            <% else %>
+              <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+            <% end %>
           <% end %>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
 
     <div class="game-infos-right">
@@ -29,11 +31,11 @@
         <% end %>
       </div>
       <% if @game.hand_limit == 100000 || @game.hand_limit == nil  %>
-        <%= link_to "Last 10 hands", game_path(@game), method: :put, class: "btn btn-leave" %>
+        <%= link_to "Last 10 hands", game_path(@game), method: :put, class: "btn btn-leave", :data => {:confirm => 'Are you sure that you want to stop the game in 10 hands ?'} %>
       <% else %>
         <% if @game.hand_limit - @game.hands.count > 1 %>
           <span>🚨 <%= @game.hand_limit - @game.hands.count %> hands left 🚨</span>
-        <% elsif @game.hand_limit - @game.hands.count == 1  %>
+        <% elsif @game.hand_limit - @game.hands.count == 1 && @game.hands.where(game: @game).last.river_cards.count == 0 %>
           <span>🚨 LAST HAND 🚨</span>
         <% else %>
           <span>⛔️ Game over ! ⛔️</span>
@@ -191,17 +193,19 @@
       <% end %>
       <% if @game.users.include?(current_user) %>
         <div class="buttons d-flex justify-content-center">
-          <%= simple_form_for [@game, @hand] do |f| %>
-            <%= f.hidden_field :name, :value => "Texas" %>
-            <%= f.submit "Texas", class: "dealing-button" %>
-          <% end %>
-          <%= simple_form_for [@game, @hand] do |f| %>
-            <%= f.hidden_field :name, :value => "Pineapple" %>
-            <%= f.submit "Pineapple", class: "dealing-button" %>
-          <% end %>
-           <%= simple_form_for [@game, @hand] do |f| %>
-            <%= f.hidden_field :name, :value => "Omaha 4" %>
-            <%= f.submit "Omaha 4", class: "dealing-button" %>
+          <% if @game.hand_limit - 1 > @game.hands.count %>
+            <%= simple_form_for [@game, @hand] do |f| %>
+              <%= f.hidden_field :name, :value => "Texas" %>
+              <%= f.submit "Texas", class: "dealing-button" %>
+            <% end %>
+            <%= simple_form_for [@game, @hand] do |f| %>
+              <%= f.hidden_field :name, :value => "Pineapple" %>
+              <%= f.submit "Pineapple", class: "dealing-button" %>
+            <% end %>
+            <%= simple_form_for [@game, @hand] do |f| %>
+              <%= f.hidden_field :name, :value => "Omaha 4" %>
+              <%= f.submit "Omaha 4", class: "dealing-button" %>
+            <% end %>
           <% end %>
           <% if @current_hand && @game.users.include?(current_user) %>
             <% if @current_hand.flop_cards.count == 0 %>
