omaha 5 diplay complete

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,6 +9,11 @@
   margin-right: -28px;
 }
 
+.card-1-deviation-o5 {
+  margin-right: -34px;
+}
+
+
 .card-1-deviation-o4 {
   margin-right: -4px;
 }
@@ -35,8 +40,18 @@
   margin-left: -54px;
 }
 
+.card-3-deviation-o5 {
+  margin-left: -54px;
+}
 
 .user-cards-4 {
+  margin-left: -54px;
+  width: 80px;
+  height: 110px;
+  box-shadow: 0px 1px 5px grey;
+}
+
+.user-cards-5 {
   margin-left: -54px;
   width: 80px;
   height: 110px;
