--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -70,39 +70,45 @@
         <div class="player-cards-wrapper">
           <% if (user == @user && @in_hand_players.include?(user)) %>
             <div class="text-center d-flex justify-content-center">
-              <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4}" %>
+              <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
               <%= image_tag "#{@current_hand.user_cards.where(user: @user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4}" %>
-              <% if @current_hand.user_cards.where(user: @user).count == 3 %>
-                <%= image_tag "#{@current_hand.user_cards.where(user: @user)[2].deck_card.url}", class: "user-cards-3" %>
+              <% if @current_hand.user_cards.where(user: @user).count >= 3 %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: @user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4} #{'card-3-deviation-o5' if @current_hand.user_cards.where(user: @user).count == 5}" %>
               <% end %>
-              <% if @current_hand.user_cards.where(user: @user).count == 4 %>
-                <%= image_tag "#{@current_hand.user_cards.where(user: @user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4}" %>
+              <% if @current_hand.user_cards.where(user: @user).count >= 4 %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: @user)[3].deck_card.url}", class: "user-cards-4" %>
+              <% end %>
+              <% if @current_hand.user_cards.where(user: @user).count >= 5 %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: @user)[4].deck_card.url}", class: "user-cards-5" %>
               <% end %>
             </div>
           <% elsif @in_hand_players.include?(user) %>
             <% if @current_hand.better == nil && (@in_hand_players_card_count == @in_hand_players.count * 2 || @in_hand_players_card_count == @in_hand_players.count * 4 ) %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
-                <% if @current_hand.user_cards.where(user: user).count == 3 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3" %>
+                <% if @current_hand.user_cards.where(user: user).count >= 3 %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4 } #{'card-3-deviation-o5' if @current_hand.user_cards.where(user: @user).count == 5}" %>
                 <% end %>
-                <% if @current_hand.user_cards.where(user: user).count == 4 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <% if @current_hand.user_cards.where(user: user).count >= 4 %>
                   <%= image_tag "#{@current_hand.user_cards.where(user: user)[3].deck_card.url}", class: "user-cards-4" %>
+                <% end %>
+                <% if @current_hand.user_cards.where(user: user).count >= 5 %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[4].deck_card.url}", class: "user-cards-5" %>
                 <% end %>
               </div>
             <% else %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
-                <% if @current_hand.user_cards.where(user: user).count == 3 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3" %>
+               <% if @current_hand.user_cards.where(user: user).count >= 3 %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-3-deviation-o5' if @current_hand.user_cards.where(user: @user).count == 5}" %>
                 <% end %>
-                <% if @current_hand.user_cards.where(user: user).count == 4 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <% if @current_hand.user_cards.where(user: user).count >= 4 %>
                   <%= image_tag "#{@current_hand.user_cards.where(user: user)[3].deck_card.url}", class: "user-cards-4" %>
+                <% end %>
+                <% if @current_hand.user_cards.where(user: user).count >= 5 %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[4].deck_card.url}", class: "user-cards-5" %>
                 <% end %>
               </div>
             <% end %>
@@ -205,6 +211,10 @@
             <%= simple_form_for [@game, @hand] do |f| %>
               <%= f.hidden_field :name, :value => "Omaha 4" %>
               <%= f.submit "Omaha 4", class: "dealing-button" %>
+            <% end %>
+            <%= simple_form_for [@game, @hand] do |f| %>
+              <%= f.hidden_field :name, :value => "Omaha 5" %>
+              <%= f.submit "Omaha 5", class: "dealing-button" %>
             <% end %>
           <% end %>
           <% if @current_hand && @game.users.include?(current_user) %>
