--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -380,3 +380,14 @@ height: 22px;
   font-weight: 500;
   border-bottom: 2px solid lightgrey;
 }
+
+.game-name-display {
+  text-align: center;
+  color: rgba(1, 90, 24, 0.8);
+  font-weight: bold;
+  font-size: 26px;
+}
+
+.inner-table-wrapper {
+  margin-top: -40px;
+}
