leaving the game logic complete

--- a/app/assets/stylesheets/components/_game-infos.scss
+++ b/app/assets/stylesheets/components/_game-infos.scss
@@ -1,5 +1,6 @@
 .game-infos {
   margin-bottom: 60px;
+  width: 170px;
   color: white;
   border: 1px solid black;
   width: fit-content;
@@ -49,5 +50,18 @@
 
 .btn-flat:hover {
   background: #008001;
+  color: white;
+}
+
+.btn-progress {
+  color: white;
+  padding: 4px 12px;
+  border-radius: 4px;
+  background: #00ad5f;
+  transition: background 0.3s ease;
+  font-size: smaller;
+}
+
+.btn-progress:hover {
   color: white;
 }
