--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -124,3 +124,10 @@ input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(214, 214, 214);
   }
 }
+
+.results-button {
+  background: rgba(253, 76, 76, 0.8);
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-top: 20px;
+}
