--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,5 @@
-<div class="show-content-wrapper">
+<div class="show-content-wrapper" data-controller="game-subscription"
+  data-game-subscription-game-id-value="<%= @game.id %>">
   <div class="game-infos-wrapper d-flex justify-content-between">
     <div class="game-infos">
       <h3><%= @game.name %></h3>
