--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%="home-navbar" if (params[:action]=="home" || params[:action]=="index") %>">
-  <% if params[:action]=="home" || params[:action]=="index" %>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%="home-navbar" if (params[:action]=="home" || params[:action]=="index" || params[:action]=="dashboard" ) %>">
+  <% if params[:action]=="home" || params[:action]=="index" || params[:action]=="dashboard" %>
     <a class="navbar-brand" href="/">
      <p class="poker-symbols">♣️♦️</p>
      <p class="poker-symbols">❤️♠️</p>
