--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :put) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -13,12 +13,14 @@
     <%= f.input :name,
                 required: true,
                 autofocus: true,
+                value: current_user.name,
                 input_html: { autocomplete: "name" }%>
     <%= f.input :pseudo,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "pseudo" }%>
-
+    <%= f.input :photo, as: :file, id: "file1", name: "file1", style:"display:none",
+                              label: "Upload a picture of you..." %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
@@ -30,6 +32,7 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+
   </div>
 
   <div class="form-actions">
