--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -3,7 +3,7 @@
   background-color: rgb(214, 214, 214);
   color: white;
   border-radius: 8px;
-  box-shadow: 2px 5px 18px 1px rgba(196, 196, 196, 0.4);
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.4);
   height: fit-content;
   .book_btn{
     text-align: center;
@@ -71,4 +71,17 @@
 
 .pages-dashboard {
   background-image: linear-gradient(180deg, black, rgb(1, 76, 1));
+  height: 100vh;
+}
+
+#general_info_card {
+  margin-bottom: 20px;
+  padding: 40px 40px 26px 40px;
+  p {
+    color: rgb(90, 90, 90);
+  }
+}
+
+.general-stats-left {
+  margin-right: 40px;
 }
