--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -26,32 +26,81 @@
       </div>
     </div>
     <div>
-    <div class="dashboard_card" id="general_info_card">
-      <h2>General Statistics</h2>
-      <% if Hand.count > 0 %>
-        <div class="d-flex justify-content-between">
-          <div class="general-stats-left">
-            <p>You played <strong><%= @user.hands.count %> hands</strong>.</p>
-            <p>You won <span class="positive-score"><%= ((HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1)) % 1 == 0 ? (HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1).to_i : (HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1) %>%</span> of the hands you did not fold.</p>
-            <p>Your total revenue is <span class="<%= 'positive-score' if @user_revenue > 0 %> <%= 'negative-score' if @user_revenue < 0 %>"><%= @user_revenue %>€</span> !</p>
+      <div class="dashboard_card" id="general_info_card">
+        <h2>General Statistics</h2>
+        <% if Hand.count > 0 %>
+          <div class="d-flex justify-content-between">
+            <div class="general-stats-left">
+              <p>You played <strong><%= @user.hands.count %> hands</strong>.</p>
+              <p>You won <span class="positive-score"><%= ((HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1)) % 1 == 0 ? (HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1).to_i : (HandWinner.where(winner: User.find_by_id(1)).count/UserHand.where(user: User.find_by_id(1), active: true).count.to_f*100).round(1) %>%</span> of the hands you did not fold.</p>
+              <p>Your total revenue is <span class="<%= 'positive-score' if @user_revenue > 0 %> <%= 'negative-score' if @user_revenue < 0 %>"><%= @user_revenue %>€</span> !</p>
+            </div>
+            <div>
+              <p>Players have played a total of <%= @total_money_played %>€.</p>
+              <% if @biggest_winner == @user %>
+                <p>The biggest winner is <strong>you</strong> <span class="positive-score">(<%= @biggest_score %>€)</span>.</p>
+              <% else %>
+                <p>The biggest winner is <strong><%= @biggest_winner.pseudo %></strong> <span class="positive-score">(<%= @biggest_score %>€)</span>.</p>
+              <% end %>
+              <% if @biggest_loser == @user %>
+                <p>The biggest loser is <strong>you</strong> <span class="negative-score">(<%= @lowest_score %>€)</span>.</p>
+              <% else %>
+                <p>The biggest loser is <strong><%= @biggest_loser.pseudo %></strong> <span class="negative-score">(<%= @lowest_score %>€)</span>.</p>
+              <% end %>
+            </div>
           </div>
-          <div>
-            <p>Players have played a total of <%= @total_money_played %>€.</p>
-            <% if @biggest_winner == @user %>
-              <p>The biggest winner is <strong>you</strong> <span class="positive-score">(<%= @biggest_score %>€)</span>.</p>
-            <% else %>
-              <p>The biggest winner is <strong><%= @biggest_winner.pseudo %></strong> <span class="positive-score">(<%= @biggest_score %>€)</span>.</p>
-            <% end %>
-            <% if @biggest_loser == @user %>
-              <p>The biggest loser is <strong>you</strong> <span class="negative-score">(<%= @lowest_score %>€)</span>.</p>
-            <% else %>
-              <p>The biggest loser is <strong><%= @biggest_loser.pseudo %></strong> <span class="negative-score">(<%= @lowest_score %>€)</span>.</p>
-            <% end %>
-          </div>
-        </div>
-      <% else %>
-        <p>Not enough data available.</p>
-      <% end %>
+        <% else %>
+          <p>Not enough data available.</p>
+        <% end %>
+      </div>
+      <div class="dashboard_card" id="hand_history_card">
+        <h2>Hand History</h2>
+        <% if @user.hands.count > 5 %>
+          <table class="table icons-bold">
+            <tr>
+              <th></th>
+              <th>Game</th>
+              <th>Type</th>
+              <th>Cards</th>
+              <th>Board</th>
+              <th>Hand Winner</th>
+              <th>Win/Loss</th>
+            </tr>
+
+            <tr>
+              <td>Best Hand</td>
+              <td><%= Activity.find_by_id(booking.activity_id).name %></td>
+              <td><%= Activity.find_by_id(booking.activity_id).place %></td>
+              <td><%= booking.activity.start_date.strftime("%e %^b %Y %R") %></td>
+              <td><%= booking.activity.end_date.strftime("%e %^b %Y %R") %></td>
+              <td class="booking_status"><%= booking.status %></td>
+
+              <td>
+                <%= link_to activity_path(Activity.find_by_id(booking.activity_id)) do %>
+                  <i class="far fa-eye"></i>
+                <% end %>
+              </td>
+              <td>
+                <% if Activity.find_by_id(booking.activity_id).chatroom.messages.length == 0 %>
+                  <%= link_to activity_chatroom_path(Activity.find_by_id(booking.activity_id), Activity.find_by_id(booking.activity_id).chatroom) do %>
+                <%# activity_chatroom_path(@chatroom.activity, @chatroom, anchor: "message-#{@message.id}") %>
+                  <i class="far fa-comment-dots"></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to activity_chatroom_path(Activity.find_by_id(booking.activity_id), Activity.find_by_id(booking.activity_id).chatroom, anchor: "message-#{Activity.find_by_id(booking.activity_id).chatroom.messages.last.id}" ) do %>
+                <%# activity_chatroom_path(@chatroom.activity, @chatroom, anchor: "message-#{@message.id}") %>
+                  <i class="far fa-comment-dots"></i>
+                  <% end %>
+                <% end %>
+              </td>
+            </tr>
+          </table>
+          <div class="book_btn"><button class="dashboard_button"><%= link_to "Book another activity !", activities_path %></button></div>
+        <% else %>
+          <p>Not enough data available.</p>
+          <button class="dashboard_button"><%= link_to "Look for activities", activities_path %></button>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
