change in user table complete

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -64,6 +64,7 @@
               <th>Cards</th>
               <th>Board</th>
               <th>Hand Winner</th>
+              <th>Pot</th>
               <th>Win/Loss</th>
             </tr>
 
